# app-fast-api-contacts

./: .coverage  .env.example  .gitignore  alembic.ini  main.py  pyproject.toml  readme.md  requirements.txt
alembic/: env.py
alembic/versions/: 4ea8f3e28f57_second_migration.py  fe30461f745c_initial_migration.py
src/conf/: config.py  messages.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py
tests/: conftest.py  test_e2e_contacts.py  test_e2e_users.py  test_unit_repository_contacts.py  test_unit_repository_users.py  test_y_e2e_auth.py
tests/__pycache__/: conftest.cpython-313-pytest-8.3.4.pyc.13392  conftest.cpython-313-pytest-8.3.4.pyc.8664  test_e2e_auth.cpython-313-pytest-8.3.4.pyc.10232  test_e2e_auth.cpython-313-pytest-8.3.4.pyc.10312  test_e2e_auth.cpython-313-pytest-8.3.4.pyc.10660  test_e2e_auth.cpython-313-pytest-8.3.4.pyc.10664  test_e2e_auth.cpython-313-pytest-8.3.4.pyc.10668  test_e2e_auth.cpython-313-pytest-8.3.4.pyc.1084  test_e2e_auth.cpython-313-pytest-8.3.4.pyc.11148  test_e2e_auth.cpython-313-pytest-8.3.4.pyc.11152  test_e2e_auth.cpython-313-pytest-8.3.4.pyc.11396  test_e2e_auth.cpython-313-pytest-8.3.4.pyc.11428  test_e2e_auth.cpython-313-pytest-8.3.4.pyc.11740  test_e2e_auth.cpython-313-pytest-8.3.4.pyc.11820  test_e2e_auth.cpython-313-pytest-8.3.4.pyc.11908  test_e2e_auth.cpython-313-pytest-8.3.4.pyc.11960  test_e2e_auth.cpython-313-pytest-8.3.4.pyc.11968  (+87 more)
(+2 files in other folders)
