[project]
name = "fast_api_koyeb"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmytro02",email = "dimaliar228@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "libgravatar (>=1.0.4,<2.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "cloudinary (>=1.42.2,<2.0.0)",
    "fastapi-limiter (>=0.1.6,<0.2.0); python_version < '4.0'",
    "fastapi-mail (>=1.4.1,<2.0.0); python_version < '4.0'",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "sphinx (>=8.2.0,<9.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-mock (>=3.14.0,<4.0.0)",
    "pytest-asyncio (>=0.25.3,<0.26.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-cov (>=6.0.0,<7.0.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
    "tests", ]
pythonpath = "."
filterwarnings = "ignore::DeprecationWarning"